image generation - wip

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         code {
             font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
         }
+        img.scaled {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
