--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
+        :root {
+            font-size: 24px;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -17,16 +20,16 @@
             height: 100vh;
         }
         #sidebar {
-            width: 200px;
+            width: 12.5rem; /* 200px */
             background-color: #333;
             color: white;
             display: flex;
             flex-direction: column;
-            padding: 10px;
+            padding: 0.625rem; /* 10px */
         }
         #sidebar h2 {
             margin: 0;
-            padding-bottom: 10px;
+            padding-bottom: 0.625rem; /* 10px */
             border-bottom: 1px solid #444;
             text-align: center;
         }
@@ -40,7 +43,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px;
+            padding: 0.625rem; /* 10px */
             cursor: pointer;
             position: relative;
         }
@@ -60,22 +63,22 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            right: 10px;
+            right: 0.625rem; /* 10px */
             background-color: #444;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2); /* 8px 16px */
             z-index: 1;
-            width: 160px; /* Adjust width to fit the button text */
+            width: 10rem; /* 160px */
         }
         .dropdown-content button {
             color: white;
-            padding: 10px 16px;
+            padding: 0.625rem 1rem; /* 10px 16px */
             text-decoration: none;
             display: block;
             width: 100%;
             border: none;
             background: none;
             text-align: left;
-            white-space: nowrap; /* Prevent text wrapping */
+            white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
         }
@@ -90,32 +93,32 @@
         #session-title-bar {
             background-color: #333;
             color: white;
-            height: 50px;
+            height: 3.125rem; /* 50px */
         }
         #chat {
             flex: 1;
             overflow-y: auto;
-            padding: 10px;
+            padding: 0.625rem; /* 10px */
             background-color: #f5f5f5;
         }
         #input-area {
             display: flex;
-            padding: 10px;
+            padding: 0.625rem; /* 10px */
             background-color: #ddd;
         }
         #message-input {
             flex: 1;
-            padding: 10px;
-            font-size: 16px;
+            padding: 0.625rem; /* 10px */
+            font-size: 1rem; /* 16px */
         }
         #send-button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 0.625rem 1.25rem; /* 10px 20px */
+            font-size: 1rem; /* 16px */
         }
         .message {
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
+            padding: 0.625rem; /* 10px */
+            margin: 0.3125rem 0; /* 5px */
+            border-radius: 0.3125rem; /* 5px */
             word-wrap: break-word;
             user-select: text;
         }
@@ -130,15 +133,15 @@
         .message-content {
             white-space: pre-wrap;
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            font-size: 1rem;
             background-color: transparent;
             border: none;
             user-select: text;
         }
         pre {
             background: #f5f2f0;
-            padding: 10px;
-            border-radius: 5px;
+            padding: 0.625rem; /* 10px */
+            border-radius: 0.3125rem; /* 5px */
             overflow: auto;
         }
         code {
@@ -149,12 +152,12 @@
             height: auto;
         }
         .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            width: 36px;
-            height: 36px;
+            border: 0.25rem solid rgba(0, 0, 0, 0.1); /* 4px */
+            width: 2.25rem; /* 36px */
+            height: 2.25rem; /* 36px */
             border-radius: 50%;
             border-left-color: #333;
-            margin: 10px auto;
+            margin: 0.625rem auto; /* 10px */
             animation: spin 1s linear infinite;
         }
         @keyframes spin {
@@ -164,6 +167,10 @@
             100% {
                 transform: rotate(360deg);
             }
+        }
+        #reason-toggle-button.active {
+            background-color: #4caf50;
+            color: white;
         }
     </style>
 </head>
@@ -183,11 +190,13 @@
         <div id="input-area">
             <textarea id="message-input" rows="3" placeholder="Type your message here..."></textarea>
             <button id="send-button">Send</button>
+            <button id="reason-toggle-button">Reason</button>
         </div>
     </div>
     <script>
         let currentAssistantMessageId = null;
         let assistantMessageBuffer = '';
+        let reasoningMode = false;
 
         document.getElementById('send-button').addEventListener('click', sendMessage);
         document.getElementById('message-input').addEventListener('keydown', function(event) {
@@ -201,6 +210,29 @@
             window.pywebview.api.reset_session();
             currentAssistantMessageId = null;
             updateSessionTitleBar("New Session");
+        });
+        document.getElementById('reason-toggle-button').addEventListener('click', function () {
+            reasoningMode = !reasoningMode;
+            this.classList.toggle('active');
+        });
+
+        document.addEventListener('click', function(e) {
+            if (e.target.classList.contains('accordion-toggle')) {
+                const content = e.target.nextElementSibling;
+                const isVisible = content.style.display === 'block';
+                content.style.display = isVisible ? 'none' : 'block';
+                e.target.textContent = isVisible ? 'Show Reasoning' : 'Hide Reasoning';
+            }
+        });
+
+        // Close the dropdown if the user clicks outside of it
+        window.addEventListener('click', function(event) {
+            const dropdowns = document.querySelectorAll('.dropdown-content');
+            dropdowns.forEach(dropdown => {
+                if (dropdown.style.display === 'block') {
+                    dropdown.style.display = 'none';
+                }
+            });
         });
 
         function sendMessage() {
@@ -228,6 +260,32 @@
             const spinnerDiv = document.createElement('div');
             spinnerDiv.classList.add('spinner');
             return spinnerDiv;
+        }
+
+        function createContentDiv(reasoning) {
+            const contentDiv = document.createElement('div');
+            contentDiv.classList.add('message-content');
+
+            if (reasoning) {
+                const accordion = document.createElement('details');
+                accordion.classList.add('reasoning-accordion');
+                const summary = document.createElement('summary');
+                summary.textContent = 'Thinking';
+                accordion.appendChild(summary);
+                const reasoningDiv = document.createElement('div');
+                reasoningDiv.classList.add('reasoning');
+                accordion.appendChild(reasoningDiv);
+                const conclusionDiv = document.createElement('div');
+                conclusionDiv.classList.add('conclusion');
+                accordion.appendChild(conclusionDiv);
+
+                contentDiv.appendChild(accordion);
+            } else {
+                const conclusionDiv = document.createElement('div');
+                conclusionDiv.classList.add('conclusion');
+                contentDiv.appendChild(conclusionDiv);
+            }
+            return contentDiv;
         }
 
         function addMessage(role, message, withSpinner=false) {
@@ -259,13 +317,12 @@
                         messageDiv.appendChild(spinner);
                     }
                 }
-                const contentDiv = document.createElement('div');
-                contentDiv.classList.add('message-content');
+                const contentDiv = createContentDiv(reasoningMode);
                 if (role === 'assistant') {
                     assistantMessageBuffer = message;
-                    contentDiv.innerHTML = parseMessageContent(assistantMessageBuffer);
+                    addContent(contentDiv, assistantMessageBuffer);
                 } else {
-                    contentDiv.innerHTML = parseMessageContent(message);
+                    addContent(contentDiv, message);
                 }
                 messageDiv.appendChild(contentDiv);
                 chat.appendChild(messageDiv);
@@ -278,6 +335,27 @@
 
             // Render LaTeX content
             MathJax.typesetPromise([chat]);
+        }
+
+        function addContent(contentDiv, content) {
+            if (content.includes("<think>")) {
+                const idx = content.indexOf('</think>');
+                let reasoning = '';
+                let conclusion = '';
+                if (idx !== -1) {
+                    // split into reasoning / conclusion
+                    reasoning = content.slice(0, idx);
+                    reasoning = parseMessageContent(reasoning);
+                    conclusion = content.slice(idx + "</think>".length);
+                    conclusion = parseMessageContent(conclusion);
+                } else {
+                    reasoning = parseMessageContent(content);
+                }
+                contentDiv.querySelector('.reasoning').innerHTML = reasoning;
+                contentDiv.querySelector('.conclusion').innerHTML = conclusion;
+            } else {
+                contentDiv.querySelector('.conclusion').innerHTML = parseMessageContent(content);
+            }
         }
 
         function parseMessageContent(message) {
@@ -363,16 +441,6 @@
             const sessionTitleBar = document.getElementById('current-session-title');
             sessionTitleBar.textContent = title;
         }
-
-        // Close the dropdown if the user clicks outside of it
-        window.addEventListener('click', function(event) {
-            const dropdowns = document.querySelectorAll('.dropdown-content');
-            dropdowns.forEach(dropdown => {
-                if (dropdown.style.display === 'block') {
-                    dropdown.style.display = 'none';
-                }
-            });
-        });
 
     </script>
 </body>
